2009-12-31  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * autogen.sh, configure.in, configure.ac:
   Rename configure.in to configure.ac.
 * plugins/geanyfunctions.h, src/plugins.c, src/plugindata.h,
   src/sciwrappers.c:
   Add sci_find_text() to the plugin API.


2009-12-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c, src/plugins.c, src/plugindata.h,
   plugins/geanyfunctions.h:
   Add editor_get_eol_char_name(), editor_get_eol_char_len() and
   editor_get_eol_char() to the plugin API.
 * src/callbacks.c, src/plugins.c, src/plugins.h:
   Fix sensitivity of the Edit->Plugin Preferences menu item
   if plugins are loaded which do not provide a configuration dialog.
 * scripts/create_py_tags.py:
   Rewrite and extend the Python tags parsing script to use
   Python's inspect module to read symbols from Python modules
   including scope information.
 * data/filetypes.restructuredtext:
   Add the default comment character sequence for reStructuredText.
 * src/callbacks.c:
   Show the Find/Goto dialogs if the corresponding toolbar buttons are
   clicked but their text fields are not part of the toolbar (#2920807).
 * data/filetypes.common, doc/geany.html, doc/geany.txt,
   src/highlighting.c:
   Add new style to change foreground and background colours for
   calltips (patch by Dimitar Zhekov, thanks, closes #2919229).
 * src/search.c:
   Remember the window position of the Find, Replace and Find in Files
   dialogs (closes #2877988).


2009-12-26  Frank Lanitz  <frank@frank.uvena.de>

 * doc/plugins.dox:
   Fix a minor typo inside plugin API reference.


2009-12-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/dialog.c, src/dialogs.h, src/document.c, src/prefs.c:
   Make dialogs_show_prompt() more flexible to take up to three
   button/response code pairs to be shown.
   Add a close button to the dialog when asking to Re-Save a
   deleted file
   (closes #2916954, based on a patch by Dominik Stadler, thanks).