@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.6: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2009-12-29" />
+<meta name="date" content="2009-12-31" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2009-12-29</td></tr>
+<td>2009-12-31</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.19</td></tr>
 </tbody>
@@ -2017,6 +2017,8 @@ defaults automatically for convenience.</dd>
 <div class="section" id="sidebar">
 <h4><a class="toc-backref" href="#id93">Sidebar</a></h4>
 <dl class="docutils">
+<dt>Show sidebar</dt>
+<dd>Whether to show the sidebar at all.</dd>
 <dt>Show symbol list</dt>
 <dd>Show the list of functions, variables, and other information in the
 current document you are editing.</dd>
@@ -5847,7 +5849,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="geany.txt">View document source</a>.
-Generated on: 2009-12-29 17:04 UTC.
+Generated on: 2009-12-31 15:43 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
