@@ -88,6 +88,7 @@ static void on_show_notebook_tabs_toggled(GtkToggleButton *togglebutton, gpointe
 static void on_enable_plugins_toggled(GtkToggleButton *togglebutton, gpointer user_data);
 static void on_use_folding_toggled(GtkToggleButton *togglebutton, gpointer user_data);
 static void on_open_encoding_toggled(GtkToggleButton *togglebutton, gpointer user_data);
+static void on_sidebar_visible_toggled(GtkToggleButton *togglebutton, gpointer user_data);
 static void on_prefs_print_radio_button_toggled(GtkToggleButton *togglebutton, gpointer user_data);
 static void on_prefs_print_page_header_toggled(GtkToggleButton *togglebutton, gpointer user_data);
 
@@ -378,6 +379,10 @@ static void prefs_init_dialog(void)
 
 
 	/* Interface settings */
+	widget = ui_lookup_widget(ui_widgets.prefs_dialog, "check_sidebar_visible");
+	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(widget), ui_prefs.sidebar_visible);
+	on_sidebar_visible_toggled(GTK_TOGGLE_BUTTON(widget), NULL);
+
 	widget = ui_lookup_widget(ui_widgets.prefs_dialog, "check_list_symbol");
 	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(widget), interface_prefs.sidebar_symbol_visible);
 
@@ -792,6 +797,9 @@ on_prefs_button_clicked(GtkDialog *dialog, gint response, gpointer user_data)
 
 
 		/* Interface settings */
+		widget = ui_lookup_widget(ui_widgets.prefs_dialog, "check_sidebar_visible");
+		ui_prefs.sidebar_visible = gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(widget));
+
 		widget = ui_lookup_widget(ui_widgets.prefs_dialog, "check_list_symbol");
 		interface_prefs.sidebar_symbol_visible = gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(widget));
 
@@ -1115,8 +1123,6 @@ on_prefs_button_clicked(GtkDialog *dialog, gint response, gpointer user_data)
 		toolbar_apply_settings();
 		toolbar_update_ui();
 		toolbar_show_hide();
-		if (interface_prefs.sidebar_openfiles_visible || interface_prefs.sidebar_symbol_visible)
-			ui_prefs.sidebar_visible = TRUE;
 		ui_sidebar_show_hide();
 		gtk_notebook_set_show_tabs(GTK_NOTEBOOK(main_widgets.notebook), interface_prefs.show_notebook_tabs);
 
@@ -1438,6 +1444,15 @@ static void on_open_encoding_toggled(GtkToggleButton *togglebutton, gpointer use
 }
 
 
+static void on_sidebar_visible_toggled(GtkToggleButton *togglebutton, gpointer user_data)
+{
+	gboolean sens = gtk_toggle_button_get_active(togglebutton);
+
+	gtk_widget_set_sensitive(ui_lookup_widget(ui_widgets.prefs_dialog, "check_list_openfiles"), sens);
+	gtk_widget_set_sensitive(ui_lookup_widget(ui_widgets.prefs_dialog, "check_list_symbol"), sens);
+}
+
+
 static void on_prefs_print_radio_button_toggled(GtkToggleButton *togglebutton, gpointer user_data)
 {
 	gboolean sens = gtk_toggle_button_get_active(togglebutton);
@@ -1689,6 +1704,8 @@ void prefs_show_dialog(void)
 				"toggled", G_CALLBACK(on_use_folding_toggled), NULL);
 		g_signal_connect(ui_lookup_widget(ui_widgets.prefs_dialog, "check_open_encoding"),
 				"toggled", G_CALLBACK(on_open_encoding_toggled), NULL);
+		g_signal_connect(ui_lookup_widget(ui_widgets.prefs_dialog, "check_sidebar_visible"),
+				"toggled", G_CALLBACK(on_sidebar_visible_toggled), NULL);
 
 		g_signal_connect(ui_lookup_widget(ui_widgets.prefs_dialog, "button_help"),
 				"button-press-event", G_CALLBACK(prefs_dialog_button_press_event_cb), NULL);
